# ShapefileCpp

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/include/: BoundsCommand.hpp  CountCommand.hpp  InfoCommand.hpp  ListCommand.hpp  RandomCommand.hpp
app/src/: App.cpp  BoundsCommand.cpp  Command.cpp  Commands.cpp  CountCommand.cpp  InfoCommand.cpp  ListCommand.cpp  RandomCommand.cpp
app/test/: BoundsCommandTest.cpp  CMakeLists.txt  CountCommandTest.cpp  InfoCommandTest.cpp  ListCommandTest.cpp  RandomCommandTest.cpp
lib/: CMakeLists.txt
lib/include/: GeometryType.hpp  ShapefileReader.hpp
lib/src/: ShapefileReader.cpp
lib/test/: BoundsTest.cpp  CMakeLists.txt  FeatureTest.cpp  FieldTest.cpp  FieldTypeTest.cpp  GeometryTypeTest.cpp  LineTest.cpp  MultiLineTest.cpp  MultiPointTest.cpp  MultiPolygonTest.cpp  PointTest.cpp  PolygonTest.cpp  RingTest.cpp  SchemaTest.cpp  ShapefileReaderTest.cpp  ShapefileWriterTest.cpp
